# libargv

./: Makefile.am  Makefile.in  argv.h  argvlib.c  atest.cpp  config.h.in  configure  configure.ac  estrtok_r.c
